moved supervisor log to /var/log/supervisor, pidfile to /tmp/, added logrotate for supervisor

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,5 +1,10 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisor/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=3
+loglevel=error
+pidfile=/tmp/supervisord.pid
 
 [include]
 files = /etc/supervisor/conf.d/*.conf
