added unix-http-server directive to supervisor

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -6,5 +6,8 @@ logfile_backups=3
 loglevel=error
 pidfile=/tmp/supervisord.pid
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+
 [include]
 files = /etc/supervisor/conf.d/*.conf
