modified supervisor.conf, added conf for supervisorctl, modified default path

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,13 +1,20 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-logfile_maxbytes=50MB
+logfile_maxbytes=10MB
 logfile_backups=3
 loglevel=error
-pidfile=/tmp/supervisord.pid
+pidfile=/var/run/supervisord.pid
 
 [unix_http_server]
-file=/tmp/supervisor.sock
+file=/var/run/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+chmod=0700
 
 [include]
 files = /etc/supervisor/conf.d/*.conf
