corrected path for unix socket

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -7,13 +7,13 @@ loglevel=error
 pidfile=/var/run/supervisord.pid
 
 [unix_http_server]
-file=/var/run/supervisor.sock
+file=/tmp/supervisor.sock
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 chmod=0700
 
 [include]
